--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -32,7 +35,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.firebase:firebase-storage:18.1.1'
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    //implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 
 
     implementation 'com.google.firebase:firebase-firestore:20.2.0'
