--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,12 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.renzam.shelf"
-        minSdkVersion 24
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -24,6 +25,7 @@ android {
     dataBinding {
         enabled true
     }
+
 }
 
 dependencies {
@@ -34,6 +36,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.firebase:firebase-storage:18.1.1'
+
+    implementation 'com.android.support:multidex:1.0.3'
 
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
